--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">WanAndroidKotlin</string>
     <string name="wechat">WeChat</string>
     <string name="project">Project</string>
+    <string name="home">Home</string>
     <string name="knowledge">Knowledge</string>
     <string name="retry">Retry Again</string>
 </resources>
